# lpdc-rs

./: Cargo.toml  README.md
src/: lib.rs
src/ecc/: code.rs  generator.rs  mod.rs  parity.rs
